# variant-effect-prediction

./: .gitignore  README.md  pyproject.toml
src/variant_effect_prediction/: __init__.py  filters.py  references.py  scoring.py  variantset.py  weights.py
src/variant_effect_prediction/metadata/: __init__.py  _data.py  alphagenome.py  borzoi.py  enformer.py
src/variant_effect_prediction/metadata/data/: README.md  alphagenome-supplemental-table-2.parquet  alphagenome-track-metadata.parquet  borzoi-track-metadata.parquet  enformer-targets-human.parquet
src/variant_effect_prediction/scorers/: __init__.py  _many_tracks.py  alphagenome.py  base.py  borzoi.py  cherimoya.py  chrombpnet.py  enformer.py
src/variant_effect_prediction/wrappers/: __init__.py  alphagenome.py  base.py  borzoi.py  enformer.py
