[project]
name = "variant-effect-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Ramirez", email = "christian.ramirez1@umassmed.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "polars[all]>=1.41.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.23.8",
    "quak>=0.3.5",
]
