[project]
name = "variant-effect-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Ramirez", email = "christian.ramirez1@umassmed.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "alphagenome-pytorch",
    "borzoi-pytorch",
    "bpnet-lite",
    "cherimoya",
    "enformer-pytorch",
    "liftover",
    "loguru>=0.7.3",
    "memelite",
    "numpy>=2.4.6",
    "polars[all]>=1.41.0",
    "pysam>=0.24.0",
    "rich>=14.3.4",
    "scipy>=1.17.1",
    "submitit>=1.5.4",
    "tangermeme>=1.0.4",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "altair>=6.1.0",
    "marimo>=0.23.8",
    "matplotlib>=3.10",
    "pytest>=9.0.3",
    "quak>=0.3.5",
]

[tool.uv]
override-dependencies = ["nvidia-cudnn-cu13==9.21.1.3"]

[tool.uv.sources]
cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "b7948c1ee6f648b05e50f52c098fcc5e4f0fede9" } # Latest (as of 2026-06-05, fixes performance degression)

# cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "7697cc7bc3a89121d68c7f933e8e7ac2d33c2231" } # Newest (as of 2026-05-26)

# cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "8f65f4bd0df49744318ddbce7f038b13d860e8cf" } # Forward megakernel
# # - introduces compile parameter to Cherimoya load classmethod. Let default to compile, omitting form API.

# cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "9cf95b0ae931be0c043f3ca81219f21d8d898d10" } # tag v0.1.0

# cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "1c6924710f3398653b86a8023b7ad4742f3a89b5"} # Oldest commit

alphagenome-pytorch = { git = "https://github.com/genomicsxai/alphagenome-pytorch.git" }
borzoi-pytorch = { git = "https://github.com/johahi/borzoi-pytorch.git" }
enformer-pytorch = { git = "https://github.com/lucidrains/enformer-pytorch.git" }
bpnet-lite = { git = "https://github.com/jmschrei/bpnet-lite.git" }
memelite = { git = "https://github.com/jmschrei/memesuite-lite.git" }
liftover = { git = "https://github.com/jeremymcrae/liftover.git" }
